# ophidian

./: .gitignore  CMakeLists.txt
cmake/: FindPAPI.cmake
experiments/: CMakeLists.txt  experiment.cpp  experiment.h  main.cpp  metric.h  run.sh
experiments/A_star/: A_star.cpp  A_star.h  A_star_data_oriented_design.cpp  A_star_data_oriented_design.h  A_star_object_oriented_design.cpp  A_star_object_oriented_design.h  A_star_test.cpp  Grid_graph_OOD.cpp  Grid_graph_OOD.h
experiments/chip_boundaries/: ChipBoundaries.cpp  ChipBoundaries.h  chip_boundaries_test.cpp  problem_a.h
experiments/interconections/: Interconnections.cpp  Interconnections.h  interconnection_estimate_test.cpp
experiments/register_clustering/: FlipFlop.h  kmeans_data_oriented_design.cpp  kmeans_data_oriented_design.h  kmeans_object_oriented_design.cpp  kmeans_object_oriented_design.h  register_clustering_size.h  register_clustering_size_test.cpp  register_clustering_test.cpp
ophidian/circuit/: Netlist.cpp  Netlist.h  verilog2LibraryMapping.cpp  verilog2LibraryMapping.h
ophidian/design/: Design.h  DesignBuilder.cpp  DesignBuilder.h
ophidian/entity_system/: Property.h  PropertyGrouped.h
ophidian/interconnection/: Flute.h  HPWL.cpp  HPWL.h  STWL.cpp  STWL.h
ophidian/placement/: Placement.cpp  Placement.h
ophidian/standard_cell/: StandardCells.cpp
test/: catch.hpp
test/entity_system/: property_grouped_test.cpp  property_grouped_test.cpp.autosave  property_test.cpp  property_test.h
